--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 			<div id="board" class="container"></div>
 		</main>
 
+		<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/neataptic@1.4.7/dist/neataptic.js"></script>
 		<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/google-palette@1.1.0/palette.js"></script>
-		<script type="text/javascript" src="js/Neuroevolution.js"></script>
 		<script type="text/javascript" src="js/maze.js"></script>
 	</body>
 </html>
