Added a Randomize button

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 			<button class="float-left">Pause</button>
 			<button class="float-left">Loop</button>
 			<button class="float-right">Reset</button>
+			<button class="float-right">Randomize</button>
 			<button class="float-right">Import/Export</button>
 		</nav>
 
